# zangbooklm

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTEGRACAO_CONDOMINIOS.md  ROTEIRO_PROJETO.md  docker-compose.yml  pyproject.toml  run.py
app/: dependencies.py  main.py
app/core/: auth.py  config.py  dependencies.py  exception_handlers.py  exceptions.py  http_client.py
app/models/: __init__.py  auth_session.py  base.py  chat_message.py  session.py  skill.py  source.py
app/routers/: auth.py  chat.py  condominios.py  gosati.py  pages.py  sessions.py  skills.py  sources.py
app/schemas/: auth.py  chat.py  gosati.py  session.py  skill.py  source.py
app/services/: auth_service.py  base.py  chat_service.py  document_converter.py  gosati_service.py  session_service.py  skill_service.py  source_service.py
app/static/css/: style.css
app/static/js/: api.js  chat.js  dashboard.js  gosati.js  notebook.js  skills.js  sources.js  utils.js
app/static/js/admin/: skill_editor.js
app/templates/: base.html  dashboard.html  login.html  notebook.html
app/templates/admin/: skill_editor.html  skills.html
app/templates/components/: _chat_panel.html  _gosati_panel.html  _navbar.html  _skill_cards.html  _source_panel.html  _upload_modal.html
